feat: se crea un metodo en el controlador solicitud docente
