# swagger/swagger.yml
@@ -128,9 +128,7 @@ paths:
     post:
       tags:
       - clonar_calendario
-      description: Clona calendario, crea tipo_evento si lo tiene, crea calendario_evento
-        si tiene, crea calendario_evento_tipo_publico si tiene, crea tipo_publico
-        si lo tiene
+      description: Clona calendario, crea tipo_evento si lo tiene, crea calendario_evento si tiene, crea calendario_evento_tipo_publico si tiene, crea tipo_publico si lo tiene
       operationId: CalendarioController.PostCalendario
       parameters:
       - in: body
@@ -148,9 +146,7 @@ paths:
     post:
       tags:
       - clonar_calendario
-      description: Clona calendario padre, crea tipo_evento si lo tiene, crea calendario_evento
-        si tiene, crea calendario_evento_tipo_publico si tiene, crea tipo_publico
-        si lo tiene
+      description: Clona calendario padre, crea tipo_evento si lo tiene, crea calendario_evento si tiene, crea calendario_evento_tipo_publico si tiene, crea tipo_publico si lo tiene
       operationId: CalendarioController.PostCalendarioPadre
       parameters:
       - in: body
@@ -185,8 +181,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -243,8 +238,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -284,8 +278,7 @@ paths:
     post:
       tags:
       - consulta_calendario_academico
-      description: Proyecto obtener el Id de calendario padre, crear el nuevo calendario
-        (hijo) e inactivar el calendario padre
+      description: Proyecto obtener el Id de calendario padre, crear el nuevo calendario (hijo) e inactivar el calendario padre
       operationId: ConsultaCalendarioAcademicoController.PostCalendarioHijo
       parameters:
       - in: body
@@ -360,8 +353,7 @@ paths:
         type: string
       - in: query
         name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
+        description: Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...
         type: string
       - in: query
         name: limit
@@ -443,8 +435,7 @@ paths:
     post:
       tags:
       - crear_actividad_calendario
-      description: Agregar actividad calendario, tipo_publico y tabla de rompimiento
-        calendario_evento_tipo_publico
+      description: Agregar actividad calendario, tipo_publico y tabla de rompimiento calendario_evento_tipo_publico
       operationId: ActividadCalendarioController.PostActividadCalendario
       parameters:
       - in: body
@@ -1324,8 +1315,7 @@ paths:
     post:
       tags:
       - proyecto_academico
-      description: Post a de un cordinador de un proyecto existente, cambia estado
-        activo a false a los coordinadores anteriores y crea el nuevo
+      description: Post a de un cordinador de un proyecto existente, cambia estado activo a false a los coordinadores anteriores y crea el nuevo
       operationId: CrearProyectoAcademicoController.PostCoordinadorById
       parameters:
       - in: path
@@ -1350,8 +1340,7 @@ paths:
     post:
       tags:
       - proyecto_academico
-      description: Post a de un registro de un proyecto existente, cambia estado activo
-        a false a los registro anteriores y crea el nuevo
+      description: Post a de un registro de un proyecto existente, cambia estado activo a false a los registro anteriores y crea el nuevo
       operationId: CrearProyectoAcademicoController.PostRegistroAltaCalidadById
       parameters:
       - in: path
@@ -1376,8 +1365,7 @@ paths:
     post:
       tags:
       - proyecto_academico
-      description: Post a de un registro de un proyecto existente, cambia estado activo
-        a false a los registro anteriores y crea el nuevo
+      description: Post a de un registro de un proyecto existente, cambia estado activo a false a los registro anteriores y crea el nuevo
       operationId: CrearProyectoAcademicoController.PostRegistroCalificadoById
       parameters:
       - in: path
@@ -1477,6 +1465,24 @@ paths:
       - in: path
         name: tercero
         description: Tercero
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: '{}'
+        "404":
+          description: not found resource
+  /solicitud_docente/get_estado/{id}:
+    get:
+      tags:
+      - solicitud_docente
+      description: consultar Produccion Academica por id de Estado de Solicitud
+      operationId: SolicitudDocenteController.GetEstadoSolicitudDocente
+      parameters:
+      - in: path
+        name: id
+        description: Id
         required: true
         type: integer
         format: int64
